# santa

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
docker/: Dockerfile.dev  Dockerfile.prod
kube/: bot.yaml  ns.yaml  redis.yaml
src/: bot.py  env.py  main.py
src/db/: actions.py  client.py  models.py
