[project]
name = "santa"
version = "0.1.0"
description = "Secret santa bot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.23.0",
    "supabase>=2.27.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "ruff>=0.14.10",
    "watchdog>=6.0.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
